--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier": "^3.6.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.9.1",
     "vite": "^7.0.5"
   }
 }
