there is a long button in the file import thing that is annoying me greatly

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
-    "@electron-toolkit/utils": "^4.0.0"
+    "@electron-toolkit/utils": "^4.0.0",
+    "use-file-picker": "^2.1.4"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
