--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(zzz-optimizer LANGUAGES CXX)
 find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Widgets)
 
 qt_standard_project_setup()
 
@@ -15,8 +16,11 @@ qt_add_executable(zzz-optimizer
     window.cpp
     window.h
     resources.qrc
-    calculatorwidget.h calculatorwidget.cpp
-    librarywidget.h librarywidget.cpp
+
+
+
+    test.h test.cpp test.ui
+
 )
 
 target_link_libraries(zzz-optimizer
@@ -24,6 +28,7 @@ target_link_libraries(zzz-optimizer
         Qt::Core
         Qt::Widgets
 )
+target_link_libraries(zzz-optimizer PRIVATE Qt6::Widgets)
 target_link_libraries(zzz-optimizer PRIVATE Qt6::Widgets)
 target_link_libraries(zzz-optimizer PRIVATE Qt6::Widgets)
 
