--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
+find_package(Qt6 REQUIRED COMPONENTS Widgets)
 
 qt_standard_project_setup()
 
@@ -20,6 +21,7 @@ qt_add_executable(zzz-optimizer
 
 
     test.h test.cpp test.ui
+    librarywidget.h librarywidget.cpp
 
 )
 
@@ -28,6 +30,7 @@ target_link_libraries(zzz-optimizer
         Qt::Core
         Qt::Widgets
 )
+target_link_libraries(zzz-optimizer PRIVATE Qt6::Widgets)
 target_link_libraries(zzz-optimizer PRIVATE Qt6::Widgets)
 target_link_libraries(zzz-optimizer PRIVATE Qt6::Widgets)
 target_link_libraries(zzz-optimizer PRIVATE Qt6::Widgets)
