something is broken
i dont know what though

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ qt_add_executable(zzz-optimizer
     home.cpp
     calc.cpp
     reference.cpp
+    calculator.h calculator.cpp
+    wengine.h wengine.cpp
 
 
 )
