seperate reference & add character selector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ qt_add_executable(zzz-optimizer
     data/character.h data/character.cpp
     data/disc.h data/disc.cpp
 
-    content/reference.cpp
+    content/reference.cpp content/reference.h
     content/calculator.h content/calculator.cpp
     content/library.cpp
 
