attempt 2 at workflow
maybe this will work

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -36,8 +36,8 @@ jobs:
       shell: bash
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
-    - name: Setup Qt
-      uses: subosito/qt-action@v2
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v4
       with:
         qt-version: ${{ matrix.qt }}
 
