--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.19)
+
+if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+    set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "Vcpkg toolchain file")
+endif()
+
 project(zzz-optimizer LANGUAGES CXX)
 
 find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
@@ -10,6 +15,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
+find_package(PcapPlusPlus REQUIRED)
 
 qt_add_executable(zzz-optimizer
     WIN32 MACOSX_BUNDLE
@@ -45,7 +52,14 @@ target_link_libraries(zzz-optimizer
         Qt::Core
         Qt::Widgets
 )
-target_link_libraries(zzz-optimizer PRIVATE Qt6::Widgets)
+target_link_libraries(zzz-optimizer
+    PRIVATE
+        PcapPlusPlus::PcapPlusPlus
+        PCAP::PCAP
+        PcapPlusPlus::Pcap++
+        PcapPlusPlus::Common++
+        PcapPlusPlus::Packet++
+)
 
 include(GNUInstallDirs)
 
